--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,15 @@ click==8.3.1
 docker==7.1.0
 fastapi==0.123.5
 h11==0.16.0
+html5rdf==1.2.1
 idna==3.11
+owlrl==7.1.4
+packaging==26.0
+prettytable==3.17.0
 pydantic==2.12.5
 pydantic_core==2.41.5
 pyparsing==3.2.5
+pyshacl==0.31.0
 rdflib==7.5.0
 requests==2.32.5
 starlette==0.50.0
@@ -18,3 +23,4 @@ typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.5.0
 uvicorn==0.38.0
+wcwidth==0.5.3
