--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ fastapi==0.123.5
 h11==0.16.0
 html5rdf==1.2.1
 idna==3.11
+Jinja2==3.1.6
+MarkupSafe==3.0.3
 owlrl==7.1.4
 packaging==26.0
 prettytable==3.17.0
